--- a/modules/text-field/demo/text-field.html
+++ b/modules/text-field/demo/text-field.html
@@ -3,7 +3,7 @@
     <h1 class="main-section__title">Text field</h1>
 
     <p class="main-section__intro">
-        <code>lx-text-field</code> is an input directive that will become an <code>input</code> element or a <code>textarea</code> element according to the transcluded element.
+        <code>lx-text-field</code> is an input directive that will become an <code>input text</code> element or a <code>textarea</code> element according to the transcluded element.
     </p>
 
     <lx-component lx-title="Basic usage" lx-path="/includes/modules/text-field/includes/basic.html" lx-js-path="/js/text-field/demo/demo-text-field_controller.js"></lx-component>
