--- a/demo/index.html
+++ b/demo/index.html
@@ -73,6 +73,7 @@
     <script src="/js/templates/fab_template.js"></script>
 
     <!-- File input -->
+    <script src="/js/file-input/demo/demo-file-input_controller.js"></script>
     <script src="/js/file-input/file-input_directive.js"></script>
     <script src="/js/templates/file-input_template.js"></script>
 
