chore demo: add icon documentation

--- a/demo/index.html
+++ b/demo/index.html
@@ -76,6 +76,10 @@
     <script src="/js/file-input/demo/demo-file-input_controller.js"></script>
     <script src="/js/file-input/file-input_directive.js"></script>
     <script src="/js/templates/file-input_template.js"></script>
+    
+    <!-- Icon -->
+    <script src="/js/icon/icon_directive.js"></script>
+    <script src="/js/templates/icon_template.js"></script>
 
     <!-- Notification -->
     <script src="/js/notification/notification_service.js"></script>
