chore demo: add notification documentation

--- a/demo/index.html
+++ b/demo/index.html
@@ -82,6 +82,7 @@
     <script src="/js/templates/icon_template.js"></script>
 
     <!-- Notification -->
+    <script src="/js/notification/demo/demo-notification_controller.js"></script>
     <script src="/js/notification/notification_service.js"></script>
 
     <!-- Progress -->
