--- a/modules/dialog/demo/dialog.html
+++ b/modules/dialog/demo/dialog.html
@@ -50,9 +50,9 @@
 
                 <tbody>
                     <tr>
-                        <td>dialogId</td>
+                        <td>dialogId*</td>
                         <td><code>string</code></td>
-                        <td>The dialog id specified in the directive id attribute (required).</td>
+                        <td>The dialog id specified in the directive id attribute.</td>
                     </tr>
                 </tbody>
             </table>
@@ -70,9 +70,9 @@
 
                 <tbody>
                     <tr>
-                        <td>dialogId</td>
+                        <td>dialogId*</td>
                         <td><code>string</code></td>
-                        <td>The dialog id specified in the directive id attribute (required).</td>
+                        <td>The dialog id specified in the directive id attribute.</td>
                     </tr>
                 </tbody>
             </table>
