--- a/modules/progress/demo/progress.html
+++ b/modules/progress/demo/progress.html
@@ -1,19 +1,41 @@
-<!-- Sidebar -->
-<ng-include src="'/includes/sidebar/sidebar-services.html'"></ng-include>
-
 <div class="main-section">
-    <h3 class="main-section__title">Progress</h3>
+    <h1 class="main-section__title">Progress</h1>
 
-    <div class="main-section__content">
-        <div class="example">
-            <div class="example__content">
-                <ng-include src="'/includes/modules/progress/includes/example.html'"></ng-include>
-            </div>
+    <p class="main-section__intro"></p>
 
-            <!-- Example -->
-            <div class="example__code" hljs include="'/includes/modules/progress/includes/example.html'" language="html"></div>
-            <div class="example__code" hljs include="'/includes/modules/progress/includes/js.html'" language="js"></div>
-            <!-- /Example -->
-        </div>
-    </div>
+    <lx-component lx-title="Basic usage" lx-path="/includes/modules/progress/includes/basic.html" lx-js-path="/js/progress/demo/demo-progress_controller.js"></lx-component>
+
+    <lx-component-attributes>
+        <table>
+            <thead>
+                <tr>
+                    <th>Parameter</th>
+                    <th>Type</th>
+                    <th>Default</th>
+                    <th>Description</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>lx-color</td>
+                    <td><code>string</code></td>
+                    <td><code>primary</code></td>
+                    <td>Define the progress color. Options: colors defined in colors and sizes section in <code>dist/scss/core/settings/defaults.scss</code></td>
+                </tr>
+                <tr>
+                    <td>lx-diameter</td>
+                    <td><code>string</code></td>
+                    <td><code>100</code></td>
+                    <td>The progress scale defined in percent value. Work only with the circular progress.</td>
+                </tr>
+                <tr>
+                    <td>lx-type*</td>
+                    <td><code>string</code></td>
+                    <td></td>
+                    <td>Define the progress type. Options: <code>circular</code>, <code>linear</code></td>
+                </tr>
+            </tbody>
+        </table>
+    </lx-component-attributes>
 </div>
