chore demo: add progress description

--- a/modules/progress/demo/progress.html
+++ b/modules/progress/demo/progress.html
@@ -1,7 +1,9 @@
 <div class="main-section">
     <h1 class="main-section__title">Progress</h1>
 
-    <p class="main-section__intro"></p>
+    <p class="main-section__intro">
+        <code>lx-progress</code> is a directive that create a circular or a linear progress.
+    </p>
 
     <lx-component lx-title="Basic usage" lx-path="/includes/modules/progress/includes/basic.html" lx-js-path="/js/progress/demo/demo-progress_controller.js"></lx-component>
 
