chore demo: add radio button documentation

--- a/demo/index.html
+++ b/demo/index.html
@@ -90,7 +90,8 @@
     <script src="/js/progress/progress_directive.js"></script>
     <script src="/js/templates/progress_template.js"></script>
 
-    <!-- Radio -->
+    <!-- Radio button -->
+    <script src="/js/radio-button/demo/demo-radio-button_controller.js"></script>
     <script src="/js/radio-button/radio-button_directive.js"></script>
     <script src="/js/templates/radio-button_template.js"></script>
 
