--- a/modules/checkbox/demo/checkbox.html
+++ b/modules/checkbox/demo/checkbox.html
@@ -16,7 +16,7 @@
     </lx-component>
 
     <lx-component lx-title="Main colors" lx-path="/includes/modules/checkbox/includes/color.html" lx-js-path="/js/checkbox/demo/demo-checkbox_controller.js">
-        You can specify checkbox color with main colors defined in <code>dist/scss/core/settings/defaults.scss</code>
+        You can specify the checkbox color with main colors defined in <code>dist/scss/core/settings/defaults.scss</code>
     </lx-component>
 
     <lx-component-attributes>
@@ -35,7 +35,7 @@
                     <td>lx-color</td>
                     <td><code>string</code></td>
                     <td><code>accent</code></td>
-                    <td>Define the button color. Options: colors defined in colors and sizes section in <code>dist/scss/core/settings/defaults.scss</code></td>
+                    <td>Define the checkbox color. Options: colors defined in colors and sizes section in <code>dist/scss/core/settings/defaults.scss</code></td>
                 </tr>
             </tbody>
         </table>
