chore demo: add search filter documentation

--- a/demo/index.html
+++ b/demo/index.html
@@ -99,6 +99,7 @@
     <script src="/js/ripple/ripple_directive.js"></script>
 
     <!-- Search filter -->
+    <script src="/js/search-filter/demo/demo-search-filter_controller.js"></script>
     <script src="/js/search-filter/search-filter_directive.js"></script>
     <script src="/js/templates/search-filter_template.js"></script>
 
