--- a/modules/search-filter/demo/search-filter.html
+++ b/modules/search-filter/demo/search-filter.html
@@ -1,18 +1,43 @@
-<!-- Sidebar -->
-<ng-include src="'/includes/sidebar/sidebar-directives.html'"></ng-include>
-
 <div class="main-section">
-    <h3 class="main-section__title">Search filter</h3>
+    <h1 class="main-section__title">Search filter</h1>
 
-    <div class="main-section__content">
-        <div class="example">
-            <div class="example__content">
-                <ng-include src="'/includes/modules/search-filter/includes/example.html'"></ng-include>
-            </div>
+    <p class="main-section__intro">
+        <code>lx-search-filter</code> is a directive that create a search filter with various style options.
+    </p>
 
-            <!-- Example -->
-            <div class="example__code" hljs include="'/includes/modules/search-filter/includes/example.html'" language="html"></div>
-            <!-- /Example -->
-        </div>
-    </div>
+    <lx-component lx-title="Basic usage" lx-path="/includes/modules/search-filter/includes/basic.html" lx-js-path="/js/search-filter/demo/demo-search-filter_controller.js"></lx-component>
+
+    <lx-component-attributes>
+        <table>
+            <thead>
+                <tr>
+                    <th>Parameter</th>
+                    <th>Type</th>
+                    <th>Default</th>
+                    <th>Description</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>lx-closed</td>
+                    <td><code>boolean</code></td>
+                    <td><code>false</code></td>
+                    <td>Define if the input is hidden and should be opened on search icon click.</td>
+                </tr>
+                <tr>
+                    <td>lx-color</td>
+                    <td><code>string</code></td>
+                    <td><code>black</code></td>
+                    <td>Define the search filter color. Options: colors defined in colors and sizes section in <code>dist/scss/core/settings/defaults.scss</code></td>
+                </tr>
+                <tr>
+                    <td>lx-width</td>
+                    <td><code>string</code></td>
+                    <td><code>240</code></td>
+                    <td>Define the search filter width in pixels. A percent value can be defined too. The default value is applied only in closed mode.</td>
+                </tr>
+            </tbody>
+        </table>
+    </lx-component-attributes>
 </div>
