chore demo: add select documentation

--- a/demo/index.html
+++ b/demo/index.html
@@ -104,6 +104,7 @@
     <script src="/js/templates/search-filter_template.js"></script>
 
     <!-- Select -->
+    <script src="/js/select/demo/demo-select_controller.js"></script>
     <script src="/js/select/select_directive.js"></script>
     <script src="/js/templates/select_template.js"></script>
 
