--- a/modules/text-field/demo/text-field.html
+++ b/modules/text-field/demo/text-field.html
@@ -28,13 +28,13 @@
                     <td>lx-error</td>
                     <td><code>boolean</code></td>
                     <td></td>
-                    <td>When present, set red error style.</td>
+                    <td>Set red error style.</td>
                 </tr>
                 <tr>
                     <td>lx-fixed-label</td>
                     <td><code>boolean</code></td>
-                    <td></td>
-                    <td>When present, input label will act like a classic placeholder.</td>
+                    <td><code>false</code></td>
+                    <td>Input label will act like a classic placeholder.</td>
                 </tr>
                 <tr>
                     <td>lx-icon</td>
@@ -58,7 +58,7 @@
                     <td>lx-valid</td>
                     <td><code>boolean</code></td>
                     <td></td>
-                    <td>When present, set green valid style.</td>
+                    <td>Set green valid style.</td>
                 </tr>
             </tbody>
         </table>
