chore demo: add switch documentation

--- a/demo/index.html
+++ b/demo/index.html
@@ -109,6 +109,7 @@
     <script src="/js/templates/select_template.js"></script>
 
     <!-- Switch -->
+    <script src="/js/switch/demo/demo-switch_controller.js"></script>
     <script src="/js/switch/switch_directive.js"></script>
     <script src="/js/templates/switch_template.js"></script>
 
