chore demo: add tabs documentation

--- a/demo/index.html
+++ b/demo/index.html
@@ -114,6 +114,7 @@
     <script src="/js/templates/switch_template.js"></script>
 
     <!-- Tabs -->
+    <script src="/js/tabs/demo/demo-tabs_controller.js"></script>
     <script src="/js/tabs/tabs_directive.js"></script>
     <script src="/js/templates/tabs_template.js"></script>
 
