--- a/modules/switch/demo/switch.html
+++ b/modules/switch/demo/switch.html
@@ -16,7 +16,7 @@
     </lx-component>
 
     <lx-component lx-title="Main colors" lx-path="/includes/modules/switch/includes/color.html" lx-js-path="/js/switch/demo/demo-switch_controller.js">
-        You can specify the switch color with main colors defined in <code>dist/scss/core/settings/defaults.scss</code>
+        You can specify the switch color with main colors defined in <code>dist/scss/core/settings/defaults.scss</code>.
     </lx-component>
 
     <lx-component-attributes>
