chore demo: add toolbar documentation

--- a/modules/toolbar/demo/toolbar.html
+++ b/modules/toolbar/demo/toolbar.html
@@ -1,18 +1,9 @@
-<!-- Sidebar -->
-<ng-include src="'/includes/sidebar/sidebar-css.html'"></ng-include>
-
 <div class="main-section">
-    <h3 class="main-section__title">Toolbars</h3>
+    <h1 class="main-section__title">Toolbar</h1>
 
-    <div class="main-section__content">
-        <div class="example">
-            <div class="example__content">
-                <ng-include src="'/includes/modules/toolbar/includes/example.html'"></ng-include>
-            </div>
+    <p class="main-section__intro">
+        LumX provides a toolbar CSS component with three areas.
+    </p>
 
-            <!-- Example -->
-            <div class="example__code" hljs include="'/includes/modules/toolbar/includes/example.html'" language="html">
-            <!-- /Example -->
-        </div>
-    </div>
+    <lx-component lx-title="Basic usage" lx-path="/includes/modules/toolbar/includes/basic.html"></lx-component>
 </div>
