--- a/modules/tooltip/demo/tooltip.html
+++ b/modules/tooltip/demo/tooltip.html
@@ -1,18 +1,37 @@
-<!-- Sidebar -->
-<ng-include src="'/includes/sidebar/sidebar-directives.html'"></ng-include>
-
 <div class="main-section">
-    <h3 class="main-section__title">Tooltips</h3>
+    <h1 class="main-section__title">Tooltip</h1>
 
-    <div class="main-section__content">
-        <div class="example">
-            <div class="example__content">
-                <ng-include src="'/includes/modules/tooltip/includes/example.html'"></ng-include>
-            </div>
+    <p class="main-section__intro">
+        <code>lx-tooltip</code> is a directive that create a tooltip on target element hover.
+    </p>
 
-            <!-- Example -->
-            <div class="example__code" hljs include="'/includes/modules/tooltip/includes/example.html'" language="html"></div>
-            <!-- /Example -->
-        </div>
-    </div>
+    <lx-component lx-title="Basic usage" lx-path="/includes/modules/tooltip/includes/basic.html"></lx-component>
+
+    <lx-component-attributes>
+        <table>
+            <thead>
+                <tr>
+                    <th>Parameter</th>
+                    <th>Type</th>
+                    <th>Default</th>
+                    <th>Description</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>lx-tooltip</td>
+                    <td><code>string</code></td>
+                    <td></td>
+                    <td>The tooltip content.</td>
+                </tr>
+                <tr>
+                    <td>lx-tooltip-position</td>
+                    <td><code>string</code></td>
+                    <td><code>top</code></td>
+                    <td>The tooltip position relative to the target element.</td>
+                </tr>
+            </tbody>
+        </table>
+    </lx-component-attributes>
 </div>
